# COVIDm

./: .gitignore  AUTHORS  Makefile.am  README.md  README.org  README.tex.md  avevar.hh  bsearch.cc  bsearch.hh  config.h.in  configure.ac  geoave.cc  geoave.hh  gillespie_sampler.hh  gillespieav.hh  popstate.cc  popstate.hh  qdrandom.cc  qdrandom.hh  read_arg.hh  seeiir_h.cc  seeiir_h_nolemon.cc  seeiir_i1.cc  seeiir_i2.cc  seeiir_i3.cc  seeiir_main.cc  sir.cc  sir_f.cc  sir_m.cc
.github/workflows/: ccpp.yml
graph/: Makefile.am  eevents.hh  egraph.cc  egraph.hh  emodel.cc  emodel.hh  esampler.hh  seeiir_fc.cc  seeiir_sq.cc  seir_collector.cc  seir_collector.hh  seirmodel.cc  seirmodel.hh  sir_sq.cc  sirmodel.hh
model_desc/: README.md  README.tex.md  gen_README.sh  seeir_fc.par
