#
# Makefile.am -- automake script for COVIDm (graph subdirectory)
#
# COVIDm is copyright (c) 2020 by the authors (see AUTHORS)
#

bin_PROGRAMS = sir_sq

sir_sq_SOURCES = sir_sq.cc emodel.cc seir_collector.cc ../qdrandom.cc

EXTRA_DIST = emodel.hh esampler.hh egraph.hh eevents.hh seir_collector.hh

